cabal-version:         2.4

name:                  heltc
version:               0.1.2.0

synopsis:              HELTC - Heavenly Esoteric Little True Calculator to Esoteric Languages
description:           Please see the README on GitHub at <https://github.com/helvm/heltc#readme>
homepage:              https://helvm.github.io/heltc/
bug-reports:           https://github.com/helvm/heltc/issues

license:               Apache-2.0
license-file:          docs/license/LICENSE-APACHE
author:                Kamil Adam
maintainer:            kamil.adam.zabinski@gmail.com
copyright:             2020-2023 WriteOnly Developers

category:              Language
build-type:            Simple
extra-source-files:
  docs/developers/CHANGELOG.md
  docs/README.md

tested-with:           GHC == 9.6.2

source-repository head
  type:                git
  location:            https://github.com/helvm/heltc

flag ghcoptions
  description:         compile with options
  manual:              True
  default:             False

common common-options
  build-depends:
      base                 <  4.19
    , relude               == 1.1.0.0
--FIXME Remove Unsafe
  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude, Relude.Extra, Data.Text, Relude.Unsafe)
  default-language:    Haskell2010
  default-extensions:
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
--    NoImplicitPrelude
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns
--    CPP
--    TemplateHaskell
--    ForeignFunctionInterface
--    MagicHash
--    UnliftedFFITypes
    TypeOperators
--    UnboxedTuples
--    PackageImports
--    QuasiQuotes
--    DeriveAnyClass
--    DeriveLift
--    StaticPointers
    DerivingStrategies
    ConstraintKinds
    StrictData
  if flag(ghcoptions)
    ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wredundant-constraints
      -Wnoncanonical-monad-instances
      -fhide-source-paths
--      -Wmissing-export-lists FIXME
       -Wpartial-fields
      -Wmissing-deriving-strategies
      -fwrite-ide-info
      -hiedir=.hie
--      -Wunused-packages FIXME for attoparser
      -fprint-potential-instances
      -Werror

library
  import:              common-options
  hs-source-dirs:      hs/src
  exposed-modules:

    HelVM.HelTC.Calculator.IO.BusinessIO
    HelVM.HelTC.Calculator.Value

    HelVM.HelTC.Calculators.Blynn.Lambda

    HelVM.HelTC.Calculators.LC.API.ILType
    HelVM.HelTC.Calculators.LC.API.LambdaType

    HelVM.HelTC.Calculators.LC.Generators.Generator
    HelVM.HelTC.Calculators.LC.Generators.GeneratorUtil

    HelVM.HelTC.Calculators.LC.Generators.Impl.HaskellGenerator
    HelVM.HelTC.Calculators.LC.Generators.Impl.MetaGenerator
    HelVM.HelTC.Calculators.LC.Generators.Impl.SymbolicGenerator
    HelVM.HelTC.Calculators.LC.Generators.Impl.UnLambdaGenerator
    HelVM.HelTC.Calculators.LC.Generators.Impl.ZotGenerator

    HelVM.HelTC.Calculators.LC.Parsers.HaskellParser
    HelVM.HelTC.Calculators.LC.Parsers.MetaParser
    HelVM.HelTC.Calculators.LC.Parsers.SymbolicParser
    HelVM.HelTC.Calculators.LC.Parsers.UnLambdaParser
    HelVM.HelTC.Calculators.LC.Parsers.ZotParser

    HelVM.HelTC.Calculators.LC.Reducers.AbstractionReducer
    HelVM.HelTC.Calculators.LC.Reducers.AbsReReducer
    HelVM.HelTC.Calculators.LC.Reducers.IntegerReducer
    HelVM.HelTC.Calculators.LC.Reducers.NaturalReducer
    HelVM.HelTC.Calculators.LC.Reducers.ListReducer
    HelVM.HelTC.Calculators.LC.Reducers.SkiReducer
    HelVM.HelTC.Calculators.LC.Reducers.StringReducer


    HelVM.HelTC.Calculators.LC.Calculator
    HelVM.HelTC.Calculators.LC.DefinitionExpander
    HelVM.HelTC.Calculators.LC.Lambda
    HelVM.HelTC.Calculators.LC.LambdaReducer
    HelVM.HelTC.Calculators.LC.Lexer
    HelVM.HelTC.Calculators.LC.Parser


    HelVM.HelTC.Calculators.Legacy.Calculator
    HelVM.HelTC.Calculators.Legacy.Parser

    HelVM.HelTC.Calculators.Legacy.CodeGenerator
    HelVM.HelTC.Calculators.Legacy.Parse
    HelVM.HelTC.Calculators.Legacy.Reducer

    HelVM.HelTC.Calculators.Legacy.API.CalculusType

    HelVM.HelTC.Calculators.Legacy.Reducers.FromSki
    HelVM.HelTC.Calculators.Legacy.Reducers.LambdaReducer

    HelVM.HelTC.Calculators.Legacy.Parsers.LambdaParser
    HelVM.HelTC.Calculators.Legacy.Parsers.ZotParser

  build-depends:
      helio
    , attoparsec           <  0.14.4
    , bytestring
    , containers           <  0.7
    , parsers
    , trifecta
    , type-operators
    , yjtools
  ghc-options:

executable heltc
  import:              common-options
  hs-source-dirs:      hs/app
  main-is:             Main.hs
  other-modules:
    AppOptions
    BoolTypes
  build-depends:
      optparse-applicative >= 0.14.3.0

    , heltc
    , helio
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

test-suite heltc-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      hs/test
  main-is:             Main.hs
  other-modules:
    Spec
    SpecHook

    HelVM.Expectations
    HelVM.GoldenExpectations

    HelVM.HelTC.Calculators.LC.CalculatorSpec
    HelVM.HelTC.Calculators.LC.FileUtil

    HelVM.HelTC.Calculators.Legacy.CalculatorSpec
    HelVM.HelTC.Calculators.Legacy.ParserSpec
    HelVM.HelTC.Calculators.Legacy.FileUtil

  build-depends:
      hspec
    , hspec-core
    , hspec-expectations-pretty-diff
    , hspec-golden > 0.1.0.0
    , hspec-slow

    , helio
    , heltc

    , filepath
    , type-operators

  build-tool-depends:  hspec-discover:hspec-discover == 2.*
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

benchmark heltc-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      hs/benchmark
  main-is:             Main.hs
  build-depends:
      gauge

--    , heltc

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
